Change path of getters Pet types and pet sizes getter can be accessed by logged in user
